# git-standup

./: README.md  pyproject.toml
git_standup/: __init__.py  cli.py  scanner.py
tests/: test_cli.py  test_scanner.py
